<resources>
    <string name="app_name">OneStepMessage</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>

    <string name="hello_second_activity">Hello second activity</string>
    <string name="activity_2">Activity 2</string>
    <string name="message2">Message2</string>
    <string name="message1">Message1</string>
    <string name="activity_1_fragment_1">Activity 1 Fragment 1</string>
</resources>